fix: change tablet layout breakpoints to prevent header title overlap with slider around 796px width

--- a/src/styles/_materialui.scss
+++ b/src/styles/_materialui.scss
@@ -105,7 +105,7 @@
   white-space: nowrap;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 900px) {
   .header-page-title {
     font-size: 16px;
   }
